--- a/piano.html
+++ b/piano.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>You are welcome</title>
+    <title>Piano task</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/piano.css">
 </head>
 <body>
     <header id="flex-header">
@@ -15,13 +16,19 @@
         </ul>
     </header>
 
-    <div id="main-content">
-        <ul id="task-container">
-            <li><a href="piano.html">Piano</a></li>
-            <li><a href="">Chat</a></li>
-            <li><a href="">Whack a mole</a></li>
-        </ul>
-        <p class="main-article">Welcome to main page</p>
+    <div id="piano-content">
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
     </div>
 
     <footer id="footer">
