--- a/chat.html
+++ b/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>You are welcome</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/chat.css">
 </head>
 <body>
     <header id="flex-header">
@@ -16,15 +17,18 @@
     </header>
 
     <div id="main-content">
-        <ul id="task-container">
-            <li><a href="piano.html">Piano</a></li>
-            <li><a href="chat.html">Chat</a></li>
-            <li><a href="">Whack a mole</a></li>
-        </ul>
+        <input class="input-form" type="text">
+        <div class="button-container">
+            <button id="send-button">Send</button>
+            <button id="clear-button">Clear</button>
+        </div>
+
     </div>
 
     <footer id="footer">
     </footer>
 
+    <script src="assets/scripts/chat.js"></script>
 </body>
 </html>
+
