--- a/tasks.html
+++ b/tasks.html
@@ -17,9 +17,9 @@
 
     <div id="main-content">
         <ul id="task-container">
-            <li><a href="piano.html">Piano</a></li>
-            <li><a href="chat.html">Chat</a></li>
-            <li><a href="">Whack a mole</a></li>
+            <li><a href="piano/piano.html">Piano</a></li>
+            <li><a href="chat/chat.html">Chat</a></li>
+            <li><a href="whack/whack.html">Whack a mole</a></li>
         </ul>
     </div>
 
