--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Under construction</title>
+    <title>You are welcome</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
