--- a/chat/chat.html
+++ b/chat/chat.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>You are welcome</title>
-    <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="../assets/styles/styles.css">
     <link rel="stylesheet" href="assets/styles/chat.css">
 </head>
 <body>
     <header id="flex-header">
-        <img id="header-image" src="assets/img/main_image.jpg" alt="Hey, this is me" width="100px">
+        <img id="header-image" src="../assets/img/main_image.jpg" alt="Hey, this is me" width="100px">
         <ul id="menu-container">
-            <li id="home"><a href="index.html">Home</a></li>
-            <li id="tasks"><a href="tasks.html">Tasks</a></li>
-            <li id="about"><a href="about.html">About</a></li>
+            <li id="home"><a href="../index.html">Home</a></li>
+            <li id="tasks"><a href="../tasks.html">Tasks</a></li>
+            <li id="about"><a href="../about.html">About</a></li>
         </ul>
     </header>
 
